# nim-audit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: LINKEDIN_POST.md  USER_GUIDE.md
src/nim_audit/: __init__.py
src/nim_audit/cli/: __init__.py  cluster.py  compat.py  config.py  diff.py  env.py  fingerprint.py  lint.py  main.py  utils.py
src/nim_audit/core/: __init__.py  compat.py  config.py  diff.py  fingerprint.py  image.py  lint.py
src/nim_audit/core/env/: __init__.py  cel.py  diff.py  discovery.py  lint.py  registry.py
src/nim_audit/data/: env_registry.v1.yaml  interactions.v1.yaml
src/nim_audit/extractors/: __init__.py  api.py  base.py  metadata.py  model.py  registry.py  runtime.py  tokenizer.py
src/nim_audit/knowledge/: __init__.py  env_vars.py  gpu_matrix.py  profiles.py
src/nim_audit/models/: __init__.py  common.py  compat.py  config.py  diff.py  env.py  fingerprint.py  image.py  policy.py
src/nim_audit/registry/: __init__.py  base.py  docker.py  ngc.py  oci.py
src/nim_audit/renderers/: __init__.py  base.py  html.py  json.py  markdown.py  terminal.py
src/nim_audit/utils/: __init__.py  cache.py  config.py  errors.py  expression.py  hashing.py  logging.py  plugins.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_cache.py  test_cli.py  test_compat.py  test_config.py  test_config_utils.py  test_diff.py  test_errors.py  test_expression.py  test_fingerprint.py  test_lint.py  test_plugins.py
