[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nim-audit"
version = "0.1.0"
description = "A professional tool for auditing NVIDIA NIM containers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ash S.", email = "ashzak@gmail.com" }
]
keywords = ["nvidia", "nim", "container", "audit", "llm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-PyYAML>=6.0.0",
    "types-docker>=7.0.0",
]

[project.scripts]
nim-audit = "nim_audit.cli.main:app"

[project.urls]
Homepage = "https://github.com/ashzak/nim-audit"
Documentation = "https://github.com/ashzak/nim-audit#readme"
Repository = "https://github.com/ashzak/nim-audit"
Issues = "https://github.com/ashzak/nim-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nim_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nim_audit"]

[tool.coverage.run]
source = ["src/nim_audit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
